fix captcha alignment

--- a/mysite/static/scss/myresume/myresume.scss
+++ b/mysite/static/scss/myresume/myresume.scss
@@ -86,6 +86,7 @@
     >input{
         display: inline-block;
         width: 3em;
+        margin-bottom: 0;
     }
 }
 
